--- a/todo/src/app/components/task_form/index.css
+++ b/todo/src/app/components/task_form/index.css
@@ -1,27 +1,53 @@
 .task-form {
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  padding: 20px;
+  gap: var(--small-gap);
+  padding: var(--small-gap);
   border-radius: 5px;
-  background-color: white;
-  margin: 20px;
+  margin-top: 10px;
 }
 
 .task-form-input {
   display: flex;
   flex-direction: column;
+  gap: 5px;
+}
+
+.task-form-input > :is(input, textarea) {
+  background-color: var(--bg-color1);
+  color: var(--t-color1);
+  border: 2px solid var(--t-color1);
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+.task-form-important > button {
+  gap: 10px;
+  align-items: center;
+}
+
+.task-form-important-checked {
+  color: goldenrod;
 }
 
 .task-form-controls {
   display: flex;
-  gap: 20px;
   justify-content: center;
+  align-items: center;
+  gap: var(--gap);
+  margin-top: 20px;
 }
 
 .task-form-controls > button {
-  padding: 10px 20px;
-  width: 100px;
+  min-width: 100px;
+  padding: 5px 15px;
   border-radius: 5px;
-  background-color: #eee;
+  color: white;
+}
+
+.task-add-btn {
+  background-color: green;
+}
+.task-cancel-btn {
+  background-color: red;
 }
