--- a/todo/src/app/components/project_item/index.css
+++ b/todo/src/app/components/project_item/index.css
@@ -7,16 +7,8 @@
 .project-item-btn {
   flex-grow: 1;
   justify-content: flex-start;
-  padding: 5px var(--gap);
-  padding-right: calc(var(--gap) + 30px + (2 * var(--small-gap)));
-}
-
-.project-item-btn > span {
-  text-align: left;
-  width: 150px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+  padding: var(--tiny-gap) var(--small-gap);
+  padding-right: calc(30px + (3 * var(--small-gap)));
 }
 
 .project-item-controls {
@@ -27,10 +19,6 @@
   gap: var(--small-gap);
   align-items: center;
   visibility: hidden;
-}
-
-.project-item-controls > *:hover {
-  color: var(--accent-light);
 }
 
 .side-item:hover .project-item-controls {
