--- a/todo/src/app/components/views_list/index.css
+++ b/todo/src/app/components/views_list/index.css
@@ -1,5 +1,5 @@
 .view-btn {
   width: 100%;
   justify-content: flex-start;
-  padding: 5px var(--gap);
+  padding: var(--tiny-gap) var(--small-gap);
 }
