--- a/todo/src/styles/footer.css
+++ b/todo/src/styles/footer.css
@@ -17,7 +17,7 @@ footer {
 }
 
 .social-icon:hover {
-  color: var(--accent-dark);
+  color: var(--accent);
 }
 
 @media screen and (max-width: 480px) {
