--- a/todo/src/styles/header.css
+++ b/todo/src/styles/header.css
@@ -7,7 +7,7 @@ header {
 
   background-color: var(--bg-color3);
   font-size: 1.5rem;
-  border-bottom: 2px solid var(--accent-dark);
+  border-bottom: 2px solid var(--accent);
   user-select: none;
 }
 
@@ -24,30 +24,7 @@ header > .logo {
 }
 
 .i-logo {
-  color: var(--accent-dark);
-}
-
-:root.dark .i-logo {
-  color: var(--accent-light);
-}
-
-.base-btn {
-  background-color: var(--bg-color3);
-  padding: var(--small-gap);
-  border-radius: var(--small-rad);
-  line-height: 1;
-}
-
-.base-btn:hover {
-  filter: contrast(85%);
-}
-
-.base-btn:active {
-  transform: scale(90%);
-}
-
-.circle {
-  border-radius: 50%;
+  color: var(--accent);
 }
 
 @media screen and (max-width: 480px) {
