--- a/todo/src/styles/sidebar.css
+++ b/todo/src/styles/sidebar.css
@@ -1,4 +1,5 @@
 aside {
+  min-width: 300px;
   background-color: var(--bg-color1);
   padding: var(--gap);
   display: flex;
@@ -50,6 +51,7 @@ aside.hide {
 
 @media screen and (max-width: 480px) {
   aside {
+    min-width: auto;
     padding: var(--small-gap);
   }
 }
