changing layout...seeking simplicity

--- a/weather/src/styles/layout.css
+++ b/weather/src/styles/layout.css
@@ -1,36 +1,9 @@
 body {
-  color: #f5f5f5;
-  background-color: #262526;
-
-  background-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.4)
-    ),
-    url(../images/background.jpg);
-
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  font-family: "Montserrat", sans-serif;
+  color: var(--color-2);
+  background-color: var(--color-1);
+  font-family: "Roboto", sans-serif;
 
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr max-content;
-  grid-template-rows: repeat(1fr);
-  grid-template-areas:
-    "main-info side-info"
-    "next-week next-week";
-}
-
-#today-main-info {
-  grid-area: main-info;
-}
-
-#today-side-info {
-  grid-area: side-info;
-}
-
-#next-week-info {
-  grid-area: next-week;
+  grid-template-rows: max-content 1fr max-content;
 }
