--- a/weather/src/styles/main.css
+++ b/weather/src/styles/main.css
@@ -1,5 +1,25 @@
 @import url("../../node_modules/@fortawesome/fontawesome-free/css/all.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antic+Slab&family=Roboto:wght@400;700&display=swap");
+
+/*
+  font-family: 'Antic Slab', serif;
+  font-family: 'Roboto', sans-serif;
+*/
 
 @import url(./reset.css);
 @import url(./layout.css);
+@import url(./header.css);
+@import url(./content.css);
+@import url(./footer.css);
+
+:root {
+  --color-1: #262526;
+  --color-2: #f5f5f5;
+  --accent: #acb4f4;
+
+  --gap: 20px;
+  --small-gap: 10px;
+
+  --rad: 10px;
+  --small-rad: 5px;
+}
