--- a/weather/src/styles/content.css
+++ b/weather/src/styles/content.css
@@ -1,4 +1,35 @@
 main {
   background-color: var(--color-2);
   color: var(--color-1);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: calc(2 * var(--gap));
+  padding: var(--gap);
+}
+
+.search {
+  display: flex;
+  gap: var(--small-gap);
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.search > input {
+  flex: 1 1 auto;
+  border: 3px solid;
+  border-radius: var(--small-rad);
+  padding: 2px 5px;
+  outline: none;
+  width: 150px;
+  max-width: 350px;
+}
+
+.search > button {
+  background-color: var(--color-1);
+  color: var(--color-2);
+  padding: 5px var(--small-gap);
+  border-radius: var(--small-rad);
 }
