--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("../node_modules/@fortawesome/fontawesome-free/css/all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Antic+Slab&family=Roboto:wght@400;700&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*
+  font-family: 'Antic Slab', serif;
+  font-family: 'Roboto', sans-serif;
+*/
+
+@import url(./styles/reset.css);
+@import url(./styles/layout.css);
+@import url(./styles/header.css);
+@import url(./styles/main.css);
+@import url(./styles/footer.css);
+
+:root {
+  --color-1: #262526;
+  --color-2: #f5f5f5;
+  --accent: #acb4f4;
+
+  --gap: 1.12rem;
+  --small-gap: 0.56rem;
+
+  --rad: 0.56rem;
+  --small-rad: 0.3rem;
 }
