--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -11,6 +11,7 @@
 @import url(./styles/header.css);
 @import url(./styles/main.css);
 @import url(./styles/footer.css);
+@import url(./styles/general.css);
 
 :root {
   --color-1: #262526;
