--- a/cv-app/src/styles/main.css
+++ b/cv-app/src/styles/main.css
@@ -6,5 +6,5 @@ main {
   flex-direction: column;
   align-items: center;
   gap: var(--gap);
-  padding: var(--gap);
+  padding: var(--small-gap);
 }
