--- a/cv-app/src/app/components/PreviewPersonal/PreviewPersonal.css
+++ b/cv-app/src/app/components/PreviewPersonal/PreviewPersonal.css
@@ -7,18 +7,18 @@
     "bar         bar"
     "description description";
 
-  gap: var(--gap);
+  gap: var(--space);
   align-items: flex-start;
 }
 
 .PreviewPersonal > h3 {
   grid-area: fullname;
-  font-size: 2rem;
+  font-size: clamp(12px, 3.6vw, 40px);
   text-transform: uppercase;
 }
 .PreviewPersonal > span {
   grid-area: title;
-  font-size: 1.5rem;
+  font-size: clamp(12px, 2.7vw, 30px);
   text-transform: capitalize;
 }
 
@@ -26,7 +26,7 @@
   grid-area: info;
   display: grid;
   grid-template-columns: max-content max-content;
-  gap: 5px;
+  gap: var(--tiny-space);
   align-items: center;
 }
 
