--- a/memory-card/src/styles/general.css
+++ b/memory-card/src/styles/general.css
@@ -25,12 +25,14 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  padding: 10px 0;
 }
 
 .input-wrapper > input {
   background-color: transparent;
   border: 2px solid;
-  padding: 0 5px;
+  border-radius: 5px;
+  padding-left: 5px;
   width: 100px;
   outline: none;
   text-align: center;
